--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@
             <div class="content" style="text-align: center;">
                 <div style="font-size: 8em; margin: 40px 0;">🛡️</div>
                 <p style="font-size: 1.3em; color: #666; margin-top: 20px;">
-                    <strong>Nhóm thực hiện:</strong> [Tên nhóm của bạn]<br>
-                    <strong>Giáo viên hướng dẫn:</strong> [Tên giáo viên]<br>
+                    <strong>Nhóm thực hiện:</strong> [Cá Nhân]<br>
+                    <strong>Giáo viên hướng dẫn:</strong> [Đỗ Thị Hạnh]<br>
                     <strong>Năm học:</strong> 2026-2027
                 </p>
             </div>
@@ -982,3 +982,4 @@
 </body>
 
 </html>
+
