--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Phishing Defender - Presentation</title>
     <style>
@@ -982,4 +983,5 @@
 </body>
 
 </html>
+
 
