--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
 
         .slide-container {
-            width: 100vw;
+            width: 100%;
             height: 100vh;
             display: flex;
             align-items: center;
@@ -28,11 +28,11 @@
         .slide {
             width: 90%;
             max-width: 1200px;
-            height: 85vh;
+            min-height: 85vh;
             background: white;
             border-radius: 20px;
             box-shadow: 0 20px 60px rgba(0,0,0,0.3);
-            padding: 60px;
+            padding: 45px;
             display: none;
             flex-direction: column;
             animation: slideIn 0.5s ease-out;
@@ -982,6 +982,7 @@
 </body>
 
 </html>
+
 
 
 
