--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            overflow: hidden;
+            overflow-x: hidden;
         }
 
         .slide-container {
@@ -330,6 +330,51 @@
             font-size: 3em;
             margin-bottom: 15px;
         }
+        @media (max-width: 768px) {
+
+    .slide-container {
+        padding: 10px;
+    }
+
+    .slide {
+        width: 100%;
+        height: auto;
+        min-height: 90vh;
+        padding: 16px;
+        border-radius: 12px;
+        justify-content: center;
+    }
+
+    .slide h1 {
+        font-size: 22px !important;
+        margin-bottom: 10px;
+    }
+
+    .slide h2 {
+        font-size: 18px !important;
+    }
+
+    .slide p, 
+    .slide li {
+        font-size: 14px !important;
+        line-height: 1.4;
+    }
+
+    .slide img {
+        max-width: 120px !important;
+        height: auto;
+    }
+
+    .nav-btn {
+        padding: 10px 16px;
+        font-size: 14px;
+    }
+
+    .dots {
+        transform: scale(0.8);
+    }
+}
+
     </style>
 </head>
 <body>
@@ -982,6 +1027,7 @@
 </body>
 
 </html>
+
 
 
 
