--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
         }
 
         .slide-container {
-            width: 100%;
-            height: 100vh;
+            width: 100vw;
+            min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
+            padding: 10px;
         }
 
         .slide {
-            width: 90%;
+            width: 100%;
             max-width: 1200px;
-            min-height: 85vh;
+            min-height: auto;
             background: white;
             border-radius: 20px;
             box-shadow: 0 20px 60px rgba(0,0,0,0.3);
@@ -330,6 +331,85 @@
             font-size: 3em;
             margin-bottom: 15px;
         }
+
+    @media (max-width: 768px) {
+
+    body {
+        font-size: 14px;
+        overflow: auto;
+    }
+
+    .slide-container {
+        padding: 8px;
+        min-height: 100dvh;
+    }
+
+    .slide {
+        width: 100%;
+        height: auto;
+        padding: 16px;
+        border-radius: 12px;
+    }
+
+    h1 { font-size: 22px !important; }
+    h2 { font-size: 18px !important; }
+    h3 { font-size: 15px !important; }
+
+    p, li {
+        font-size: 13px !important;
+        line-height: 1.4;
+    }
+
+    .subtitle {
+        font-size: 14px !important;
+    }
+
+    .two-column,
+    .tech-stack,
+    .impact-grid {
+        grid-template-columns: 1fr !important;
+        gap: 12px;
+    }
+
+    .stat-number {
+        font-size: 28px;
+    }
+
+    .tech-icon,
+    .impact-icon {
+        font-size: 28px;
+    }
+
+    .screenshot {
+        height: 150px;
+    }
+
+    table {
+        font-size: 12px;
+    }
+
+    th, td {
+        padding: 6px;
+    }
+
+    .navigation {
+        padding: 8px 12px !important;
+    }
+
+    .nav-btn {
+        padding: 8px 10px;
+        font-size: 12px;
+    }
+
+    .dot {
+        width: 7px;
+        height: 7px;
+    }
+
+    .dot.active {
+        width: 16px;
+    }
+}
     </style>
 </head>
 <body>
@@ -982,6 +1062,7 @@
 </body>
 
 </html>
+
 
 
 
