--- a/index.html
+++ b/index.html
@@ -892,60 +892,6 @@
         </div>
 
         <!-- Slide 11: Lộ trình -->
-        <div class="slide">
-            <div class="slide-header">
-                <div class="slide-number">Slide 11/12</div>
-                <h2>🗓️ Lộ Trình Phát Triển</h2>
-            </div>
-            <div class="content">
-                <h3>Đã hoàn thành (12 tuần):</h3>
-                <div class="timeline">
-                    <div class="timeline-item">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-content">
-                            <strong>Tuần 1-3: Foundation</strong>
-                            <p>✅ Backend API với Flask</p>
-                            <p>✅ Frontend UI với HTML/CSS/JS</p>
-                            <p>✅ Database setup</p>
-                        </div>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-content">
-                            <strong>Tuần 4-6: AI Integration</strong>
-                            <p>✅ Claude API integration</p>
-                            <p>✅ ML model training</p>
-                            <p>✅ VirusTotal API</p>
-                        </div>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-content">
-                            <strong>Tuần 7-9: Advanced Features</strong>
-                            <p>✅ SMS/Email detector</p>
-                            <p>✅ Community reporting</p>
-                            <p>✅ Gamification</p>
-                        </div>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-content">
-                            <strong>Tuần 10-12: Testing & Launch</strong>
-                            <p>✅ User testing (50+ người)</p>
-                            <p>✅ Bug fixes</p>
-                            <p>✅ Documentation</p>
-                        </div>
-                    </div>
-                </div>
-                <h3 style="margin-top: 30px;">Kế hoạch tương lai:</h3>
-                <ul>
-                    <li><strong>Q1 2025:</strong> Mobile app (iOS + Android)</li>
-                    <li><strong>Q2 2025:</strong> Browser extension (Chrome, Firefox)</li>
-                    <li><strong>Q3 2025:</strong> Enterprise version cho doanh nghiệp</li>
-                    <li><strong>Q4 2025:</strong> Partnership với ngân hàng, tổ chức</li>
-                </ul>
-            </div>
-        </div>
 
         <!-- Slide 12: Kết luận -->
         <div class="slide">
@@ -988,7 +934,7 @@
                 <div style="text-align: center; margin-top: 50px; padding: 30px; background: linear-gradient(135deg, #667eea15, #764ba215); border-radius: 15px;">
                     <h2 style="color: #667eea; margin-bottom: 20px;">🙏 CẢM ƠN!</h2>
                     <p style="font-size: 1.2em; color: #666;">
-                        <strong>Liên hệ:</strong> [Email của bạn]<br>
+                        <strong>Liên hệ:</strong> [qhung2327@gmail.com]<br>
                         <strong>GitHub:</strong> github.com/[username]/ai-phishing-defender<br>
                         <strong>Demo:</strong> [Link demo]
                     </p>
@@ -1062,6 +1008,7 @@
 </body>
 
 </html>
+
 
 
 
