--- a/index.html
+++ b/index.html
@@ -637,7 +637,8 @@
                 <div class="demo-section">
                     <h3>Giao diện chính:</h3>
                     <div class="screenshot">
-                        [Screenshot: Dashboard với input URL và nút Quét]
+                        <img src="screenshot-main.png" 
+     style="width:100%; border-radius:8px; object-fit:cover;">
                     </div>
                 </div>
                 <div class="two-column" style="margin-top: 20px;">
@@ -891,9 +892,7 @@
             </div>
         </div>
 
-        <!-- Slide 11: Lộ trình -->
-
-        <!-- Slide 12: Kết luận -->
+        <!-- Slide 11: Kết luận -->
         <div class="slide">
             <div class="slide-header">
                 <div class="slide-number">Slide 11/11</div>
@@ -935,7 +934,7 @@
                     <h2 style="color: #667eea; margin-bottom: 20px;">🙏 CẢM ƠN!</h2>
                     <p style="font-size: 1.2em; color: #666;">
                         <strong>Liên hệ:</strong> [qhung2327@gmail.com]<br>
-                        <strong>GitHub:</strong> github.com/[username]/ai-phishing-defender<br>
+                        <strong>GitHub:</strong> github.com/[QuocHung-Cpp]/ai-phishing-defender<br>
                         <strong>Demo:</strong> [Link demo]
                     </p>
                     <p style="margin-top: 20px; font-size: 1.1em;">
@@ -1008,6 +1007,7 @@
 </body>
 
 </html>
+
 
 
 
